--- a/style.css
+++ b/style.css
@@ -18,9 +18,14 @@ a
 }
 :root
 {
+    --main-borderdiv:1px solid #444;
     --main-text-color:#123;
     --main-border:5px;
     --main-padding:5px;
+    --main-borderlinks:10px;
+    --main-fontsize:18px;
+    --main-borderimages:5px;
+    --main-fontfamilytext: "Josefin Sans", sans-serif;
 }
 .container
 {
@@ -28,13 +33,14 @@ a
     display: grid;
     gap:20px;
     width: 70%;
-    height: 200vh;
+    height: 200vh;  
     margin: 0 auto;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 0.2fr 0.7fr 0.8fr 0.8fr 1fr 0.5fr 0.3fr;
+    grid-template-rows: 0.2fr 0.7fr 0.1fr 1fr 0.8fr 1fr 0.5fr 0.3fr;
     grid-template-areas: 
         "h h h h"
         "m m m m"
+        "is is is is"
         "b1 b1 b2 b2"
         "b3 b3 b4 b4"
         "b5 b6 b6 b7"
@@ -44,10 +50,10 @@ a
   
 }
 
-header,main,.box1,.box2,.box3,.box4,.box5,.box6,.box7,.big_box,footer
+header,main,.info_section,.box1,.box2,.box3,.box4,.box5,.box6,.box7,.big_box,footer
 {
 
-    border: 2px solid black;
+    border: var(--main-borderdiv);
     background-color: inherit;
     color: var(--main-text-color);
     padding: var(--main-padding);
@@ -57,7 +63,7 @@ header,main,.box1,.box2,.box3,.box4,.box5,.box6,.box7,.big_box,footer
 header
 {
     grid-area: h;
-    background-color: white;
+    background-color: #f7ede2;
 }
 
 
@@ -71,17 +77,18 @@ header ul
 .nav_search
 {
     
-    font-size: 18px;
+    font-size: var(--main-fontsize);
     margin: 10px;
     padding: 10px;
-    border: 1px solid #444;
-    border-radius: 10px;
+    border: var(--main-borderdiv);
+    border-radius: var(--main-borderlinks);
     transition: 0.3s;
 }
 
 header a:hover
 {
     background-color: #D5F0FF;
+    color: white;
 }
 header
 aside{grid-area: a;}
@@ -90,15 +97,56 @@ main
     grid-area: m;
     background-color: #508E9D;
     color: white;
-    font-family: "Josefin Sans", sans-serif;
-    font-size: 50px;
-    display: flex;
+    font-family: var(--main-fontfamilytext);
+    font-size: 30px;   
     text-transform: uppercase;
+    display: flex;
     justify-content: space-around;
     align-items: center;
+    padding: var(--main-padding);
 }
 
+.info_section
+{
+    grid-area: is;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    border: none;
+}
 
+.info_section a
+{
+    font-family: var(--main-fontfamilytext);
+    padding: 10px;
+    border: var(--main-borderdiv);
+    border-radius: var(--main-borderlinks);
+    font-size: var(--main-fontsize);
+    background-color: #F7B0D2;
+}
+
+.box_foto1
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    font-size: var(--main-fontsize);
+    border: var(--main-borderdiv);
+}
+.box_foto1 img
+{
+    margin-top: 5%;
+    border-radius: var(--main-borderimages);
+    width: 80%;
+    height: 80%;
+}
+
+.box_foto2
+{
+    background-image: url(Assets/LogoOng.png);
+    
+}
 .box1{grid-area: b1;}
 .box2{grid-area: b2;}
 .box3{grid-area: b3;}
