--- a/ListaDeBichinhos.css
+++ b/ListaDeBichinhos.css
@@ -130,7 +130,9 @@ main
     align-items: center;
     border: none;
 }
-
+.info_section, h1, p{
+  
+}
 .info_section a
 {
     font-family: var(--main-fontfamilytext);
