--- a/style.css
+++ b/style.css
@@ -268,4 +268,17 @@ footer
     color: white;
     text-decoration: underline;
 }
+#carouselExample {
+    width: 70vh;
+    height: 50vh; 
+    justify-content: center;
+    align-items: center;
+    margin: 0%;
+}
+.carousel-item img {
+    max-width: 100%; 
+    max-height: 100%; 
+    width: 70vh;
+    height: 50vh; 
+}
 
