--- a/styles/adote.css
+++ b/styles/adote.css
@@ -1,223 +1,163 @@
 body
 {
-    background-color: #D5F0FF;
+    background-color: #ffffff;
+    box-sizing: border-box;
     padding: 0;
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
     color: #333;
+    text-align: center;
 }
 
-*
-{
-    scroll-behavior: smooth;
-}
-li
-{
-    list-style-type: none;
-}
-a
-{
-    text-decoration: none;
-    color: inherit;
-}
-:root
-{
-    --main-borderdiv:1px solid #444;
-    --main-text-color:#123;
-    --main-border:5px;
-    --main-padding:5px;
-    --main-borderlinks:10px;
-    --main-fontsize:18px;
-    --main-borderimages:5px;
-    --main-fontfamilytext: "Josefin Sans", sans-serif;
-}
-.container
-{
-    
-    display: grid;
-    gap:20px;
-    width: 70%;
-    height: 200vh;  
-    margin: 0 auto;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 0.2fr 0.7fr 0.1fr 1fr 0.8fr 1fr 0.5fr 0.3fr;
-    grid-template-areas: 
-        "h h h h"
-        "m m m m"
-        "is is is is"
-        "b1 b1 b2 b2"
-        "b3 b3 b4 b4"
-        "b5 b6 b6 b7"
-        "bb bb bb bb"
-        "f f f f"
-    
-  
+:root{--main-gradiente: linear-gradient(to left, #F7B0D2, #508E9D);}
+
+.container{
+    background-color: #D5F0FF;
+    max-width: 1200px;
+    margin:0 auto;
+    display: flex;
 }
 
-header,main,.info_section,.box1,.box2,.box3,.box4,.box5,.box6,.box7,.big_box,footer
-{
+*{scroll-behavior: smooth;} 
+li{list-style: none;}
+a{text-decoration: none;}
 
-    border: var(--main-borderdiv);
-    background-color: inherit;
-    color: var(--main-text-color);
-    padding: var(--main-padding);
-    border-radius: var(--main-border);
+.container{
+    max-width: 1200px;
+    margin:auto;
+    display: flex;
+    flex-direction: column;
+
 }
 
-header
-{
-    border: none;
-    grid-area: h;
+/* HEADER */
+.logo{
+    display: flex;
+    justify-self: flex-start;
+}
+
+.menu{
+    display: flex;
+    justify-content: space-between;
     background: #ffffff;
-    
+    padding:10px 50px;
 }
 
-
-
-header ul 
-{
-    display: flex;
-    justify-content: flex-end;
-}
-
-.nav_search
-{
-    font-size: var(--main-fontsize);
+.menu li:first-child {margin-left: 450px;}
+.menu-items a
+{   
     padding: 10px;
+    color: #333;
+    background-color: #d5f0ff;
+    margin-right: 20px;
+    border-radius: 20px;    
+}
+
+.menu-items a:hover
+{
+    padding: 10px;
+    color: white;
     border-radius: 20px;
-    transition: 0.5s;
-}
-
-.nav_search img
-{
-    width: 100px;
-}
-
-.foto_nav:hover
-{
-    background: none;
-    background-color: #e6e4e4;
-    
-}
-header a:hover
-{
-    
-    background: linear-gradient(to left, #F7B0D2, #508E9D);
-    color: white;
-}
-header
-aside{grid-area: a;}
-main
-{
-    grid-area: m;
-    background: linear-gradient(to left, #F7B0D2, #508E9D);
-    color: white;
-    font-family: var(--main-fontfamilytext);
-    font-size: 25px;   
-    text-transform: uppercase;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    padding: var(--main-padding);
-    border: none;
-}
-
-.info_section
-{
-    grid-area: is;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    border: none;
-}
-
-.info_section a
-{
-    font-family: var(--main-fontfamilytext);
-    padding: 10px;
-    border: var(--main-borderdiv);
-    border-radius: var(--main-borderlinks);
-    font-size: var(--main-fontsize);
     background-color: #F7B0D2;
 }
 
-.box_foto1
-{
+.perfil-bd img{border-radius: 50%;}
+
+header ul{
     display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
+    justify-content: flex-end;
     align-items: center;
-    font-size: var(--main-fontsize);
-    border: var(--main-borderdiv);
 }
-.box_foto1 img
-{
-    margin-top: 5%;
-    border-radius: var(--main-borderimages);
-    width: 90%;
-    height: 80%;
-    
+nav ul li{
+    padding: 10px;
+    /* transition: 0.5s; */
 }
 
-.box_foto2
-{
-    background-image: url(Assets/LogoOng.png);
-    
-    
+nav img{
+    width: 95px;
 }
-.box1{grid-area: b1;}
-.box2{grid-area: b2;}
-.box3{grid-area: b3;}
-.box4{grid-area: b4;}
-.box5{grid-area: b5;}
-.box6{grid-area: b6;}
-.box7{grid-area: b7;}
-.big_box{
-    grid-area: bb;
-    display: flex;
-    margin: 0;
-    border: none;
-}
-.big_box div 
-{
-    display: flex;
-    flex: 1;
+
+/* TÍTULO DO MAIN */
+.titulo{
     justify-content: center;
     align-items: center;
-    
+    padding: 20px;
+    font-size: 50px;
+    font-weight: bold;
+    background: var(--main-gradiente);
+    color: #edfbff;
+    font-family: "Josefin Sans", sans-serif;
+    text-transform: uppercase;
 }
 
-.big_box img
-{
-    width: 100%;
-   
+/* SUBTÍTULOS */
+h1{
+    display: flex;
+    color: #508E9D;
+    font-size: 35px;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
-.botao_vakinha
-{
-    background-color: #ED6D6A;
-    transition: 1s;
-    text-align: center;
+/* SOBRE A ONG + COMO AJUDAR */
+
+
+.sec1 {
+    display:flex;
+    justify-content: center;
+    margin: 5% 10% 5% 10%;
 }
-.botao_vakinha a
+
+.sec1 img{
+    width: 430px;
+    height: 260px;
+    object-fit: cover;
+    border-radius: 20px;
+    margin: 5%
+}
+
+.sec1 p{
+    margin-right: 20%;
+    text-align: justify;
+}
+
+.sec1 button{
+}
+
+ 
+/* BOTÕES */
+
+button{
+    cursor: pointer; 
+    padding: 3px 10px;
+    border-radius: 5px;
+    border:none;
+    background-color: #508E9D;
+    color: #ffffff;
+    font-weight: bold;
+    font-size: 25px;
+    padding: 8px;
+    margin-top: 20px;
+}
+
+button a
 {
     background-color: #fff;
-    border: 1px solid white;
+    border: none;
     padding: 20px;
     border-radius: 20px;
     transition: all linear 0.3s;
 }
-.botao_vakinha a:hover{
-    
-    color:#ED6D6A;
+button a:hover
+{
+    color:#508E9D;
     background-color: #e6e4e4;
     
 }
 
+/* FOOTER */
 footer
 {
     display: flex;
-    grid-area: f;
     background-color: #FDCEDF;
     background: linear-gradient(to left, #F7B0D2, #508E9D);
     justify-content: space-around;
@@ -240,4 +180,76 @@ footer
     color: white;
     text-decoration: underline;
 }
+
+.footer_list ul li{color: black;}
+
+/* RESPONSIVIDADE */
+
+@media (max-width: 800px) 
+{
+    .container{height: auto;}
+    img
+    {
+        width: 100%;
+    }
+    button
+    {
+        margin: 5px;
+    }
+
+    nav
+    {
+        display: flex;
+        justify-content: flex-start;
+        padding: 0;
+    }
+
+    .menu-items{justify-content: center;}
+    .menu-items ul{ margin: 0 auto;}
+    
+    .menu li {
+        margin-right: 0;
+        border: 1px solid inherit;
+        background-color: #D5F0FF;
+        border-radius: 20px;
+      }
+    .nav_img{display: none;}
+      
+    .menu li:first-child {
+        margin-left: 0; /* Remove margin from first menu item */
+      }
+    
+    nav img {width: 50px;}
+    
+    .perfil-bd{display: none;}
+
+    .conteudo{margin-bottom: 10px;}
+    .conteudo p{text-align:justify; font-size: 20px;}
+    main img
+    {
+
+        justify-content: center;
+        align-items: center;
+    }
+    .container
+    {
+        min-width: auto;
+    }  
+    .sec1, .sec2
+    {
+        flex-direction: column;
+    }  
+
+
+    
+
+    footer
+    {
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        margin-bottom: 10px;
+    }
+}
+
 
