--- a/styles/home-page.css
+++ b/styles/home-page.css
@@ -1,6 +1,7 @@
 body
 {
-    background-color: #ffffff;
+    background-image: url('../Assets/bg-img-5.jpeg');
+    /* background-size: cover; */
     box-sizing: border-box;
     padding: 0;
     margin: 0;
